# video-monitor-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-test.yml  docker-compose.yml  pyproject.toml  videos.json
.github/workflows/: ci_cd.yaml
migrations/: env.py
migrations/versions/: 5ac4df32eb1d_tz_in_last_error_date.py  6231d47567aa_initial.py  7c8b60078761_initial.py  a74e5a752ce5_is_bad_field_in_videos.py
prometheus/: prometheus.yaml
scripts/: build.sh
src/: auth.py  celery_app.py  config.py  dao.py  db.py  exc.py  main.py  periodic_tasks.py  utils.py
src/analytics/: analytics_service.py  coros.py  router.py  schemas.py
src/entities/: __init__.py
src/entities/probe/: dao.py  enums.py  model.py  schemas.py  services.py
src/entities/storage/: dao.py  model.py  schemas.py  services.py
src/entities/video/: dao.py  model.py  schemas.py  services.py
src/infrastructure/: prometheus.py  redis_client.py
src/link_generator/: link_generator.py  router.py  schemas.py
src/scripts/: populate_db.py
src/video_probe/: baseline_calculator.py  coros.py  dependencies.py  router.py  schemas.py  tasks.py  video_prober.py
tests/: conftest.py
tests/integrational_tests/mocks/: probes.json  storages.json  videos.json
tests/integrational_tests/service_tests/: test_analytics.py  test_link_generator.py  test_probes.py  test_storages.py  test_videos.py
