[project]
name = "video-monitor-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "ffmpeg>=1.4",
    "loguru>=0.7.3",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
