[project]
name = "video-monitor-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "ffmpeg>=1.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pre-commit>=4.6.0",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "tenacity>=9.1.4",
    "uvicorn>=0.48.0",
]
[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
